# td-backend

./: MODULE.bazel  README.md  WORKSPACE
.github/workflows/: ci.yaml  test.yaml
go/: go.mod  go.sum
go/td_common/config/: BUILD.bazel  env.go  setup.go
go/td_common/extractor/: BUILD.bazel  feature_extractor.go
go/td_common/message/: BUILD.bazel  job.go
go/td_common/model/: BUILD.bazel  models.go  repository.go
go/td_common/mongostore/: BUILD.bazel  datastore.go
go/td_common/payload/: BUILD.bazel  user.go
go/td_common/queue/: BUILD.bazel
go/td_common/repository/: BUILD.bazel  dataset_repository.go  exporter_repository.go  exporter_run_repository.go  model_repository.go  request_repository.go  training_run_repository.go  user_repository.go
go/td_common/response/: BUILD.bazel  api_response.go
go/td_common/service/: BUILD.bazel  auth_service.go  dataset_service.go  exporter_service.go  exportrun_service.go  model_service.go  publish_service.go  request_service.go  storage_service.go  trainingrun_service.go  user_service.go
go/td_common/storage/: BUILD.bazel
go/td_common/test/mocks/: BUILD.bazel  DatasetRepository.go  ExportRunRepository.go  ExporterRepository.go  IDatasetService.go  IExportRunService.go  IExporterService.go  IModelService.go  IRequestService.go  ITrainingrunService.go  IUserService.go  ModelRepository.go  RequestRepository.go  TrainingRunRepository.go  UserRepository.go
go/td_common/test/service/: BUILD.bazel  auth_service_test.go  encryption_service_test.go  exporter_service_test.go  model_service_test.go  publish_service_test.go  request_service_test.go  storage_service_test.go  trainingrun_service_test.go  user_service_test.go
go/td_common/test/testsupport/: BUILD.bazel  acceptance.go  consumer.go  utils.go
go/td_common/test/testsupport/containers/: BUILD.bazel
go/td_common/util/: BUILD.bazel  health.go
go/td_dashboard/cmd/: BUILD.bazel  main.go
go/td_dashboard/config/: BUILD.bazel
go/td_dashboard/handlers/: BUILD.bazel  dataset_handler.go  experiment_handler.go  export_handler.go  home_handler.go  model_handler.go  user_handler.go
go/td_dashboard/models/: BUILD.bazel
go/td_dashboard/services/: BUILD.bazel  dataset_service.go  status_service.go
go/td_dashboard/static/: BUILD  styles.css
go/td_dashboard/views/: BUILD.bazel
go/td_dashboard/views/components/: BUILD.bazel  alert.templ  alert_templ.go  card.templ  card_templ.go  table.templ  table_templ.go
go/td_dashboard/views/layouts/: BUILD.bazel  navbar.templ  navbar_templ.go
go/td_dashboard/views/pages/dataset/: BUILD.bazel  dataset.templ  dataset_templ.go
go/td_dashboard/views/pages/home/: BUILD.bazel  home.templ  home_templ.go
go/td_dataset/: Makefile
go/td_dataset/cmd/: BUILD.bazel  main.go
go/td_dataset/controller/: BUILD.bazel  dataset_controller.go
go/td_dataset/job/: BUILD.bazel  dataset_metrics_calculation_job.go
go/td_dataset/test/acceptance/: BUILD.bazel  dataset_controller_test.go  dataset_metrics_calculation_job_test.go
go/td_dataset/test/job/: BUILD.bazel  dataset_metrics_calculation_job_test.go
go/td_dataset/test/mocks/: BUILD.bazel
go/td_dispatcher/cmd/: BUILD.bazel  main.go
go/td_dispatcher/controller/: BUILD.bazel  dispatch_controller.go
go/td_dispatcher/test/acceptance/: BUILD.bazel  dispatch_controller_acceptance_test.go
go/td_download/cmd/: BUILD.bazel  main.go
go/td_download/controller/: BUILD.bazel  download_controller.go
go/td_export/cmd/: BUILD.bazel  main.go
go/td_export/controller/: BUILD.bazel  export_controller.go
go/td_exporter/cmd/: BUILD.bazel  main.go
go/td_exporter/consumer/: BUILD.bazel  export_message_consumer.go
go/td_exporter/converter/: BUILD.bazel  request_converter.go
go/td_exporter/job/: BUILD.bazel  export_job.go
go/td_exporter/test/acceptance/: BUILD.bazel  export_consumer_test.go
go/td_exporter/test/consumer/: BUILD.bazel  export_message_consumer_test.go
go/td_exporter/test/converter/: BUILD.bazel  request_converter_test.go
go/td_exporter/test/job/: BUILD.bazel  external_export_job_test.go  internal_export_job_test.go
go/td_exporter/test/mocks/: BUILD.bazel  IExportJob.go  ReduceFunction.go
go/td_model/cmd/: BUILD.bazel  main.go
go/td_model/controller/: BUILD.bazel  model_controller.go
go/td_public/assets/: BUILD
go/td_public/assets/content/: BUILD
go/td_public/cmd/: BUILD.bazel  main.go
go/td_public/handler/: BUILD.bazel  home.go  util.go
go/td_public/model/: BUILD.bazel  contact.go  features.go  hero.go  home.go  installation_guide.go  navbar.go  products.go
go/td_public/resources/: BUILD.bazel  home_resource_loader.go
go/td_public/static/: BUILD  styles.css
go/td_public/views/components/cards/: BUILD.bazel  product_card.templ  (+1 more)
go/td_public/views/home/: BUILD.bazel  index.templ  index_templ.go
go/td_public/views/layout/: BUILD.bazel  navbar.templ  navbar_templ.go
go/td_request/cmd/: BUILD.bazel  main.go
go/td_request/controller/: BUILD.bazel  request_controller.go
go/td_request/test/acceptance/: BUILD.bazel  request_controller_test.go
go/td_user/cmd/: BUILD.bazel  main.go
go/td_user/controller/: BUILD.bazel  user_controller.go
go/td_user/representation/: BUILD.bazel  user.go
python/: BUILD  requirements.in  requirements_lock.txt
python/td_common/: BUILD  main.py  test.py
python/td_common/config/: BUILD  env.py
python/td_common/consumer/: BUILD  consumer.py
python/td_common/minio/: BUILD  storage_service.py
python/td_common/model/: BUILD  dataset.py  model.py  training_run.py
python/td_common/repository/: BUILD  base_repository.py  dataset_repository.py  model_repository.py  training_run_repository.py
python/td_common/test/acceptance/: BUILD  dataset_repository_test.py  model_repository_test.py  training_run_repository_test.py
python/td_common/test/model/: BUILD  dataset_test.py  model_test.py  training_run_test.py
python/td_experiments/: main.py
python/td_train/: BUILD
python/td_train/service/: BUILD  training_data_service.py
python/td_train/test/service/: BUILD  training_data_service_test.py
(+11 files in other folders)
