"""Module for all go related dependencies"""
bazel_dep(name = "rules_go", version = "0.45.1")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_oci", version = "1.7.2")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gofiber_fiber_v2",
    "com_github_google_uuid",
    "com_github_minio_minio_go_v7",
    "com_github_sirupsen_logrus",
    "com_github_streadway_amqp",
    "org_mongodb_go_mongo_driver",
    "com_github_robertkrimen_otto",
    "com_github_robfig_cron",
    "org_golang_x_crypto"
)


