"""Tracker Detector"""
module(name="tracker-detector", version="0.0.1")
bazel_dep(name = "rules_go", version = "0.45.1")
bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_python", dev_dependency = True, version = "0.28.0")

bazel_dep(name = "aspect_bazel_lib", version = "1.36.0")
bazel_dep(name = "container_structure_test", version = "1.15.0")
bazel_dep(name = "platforms", version = "0.0.7")
bazel_dep(name = "rules_oci", version = "1.7.2")
bazel_dep(name = "rules_pkg", version = "0.7.0")

VERSION = "0.0.1"

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.21.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gofiber_fiber_v2",
    "com_github_google_uuid",
    "com_github_minio_minio_go_v7",
    "com_github_sirupsen_logrus",
    "com_github_streadway_amqp",
    "org_mongodb_go_mongo_driver",
    "com_github_robertkrimen_otto",
    "com_github_robfig_cron",
    "org_golang_x_crypto",
    "com_github_stretchr_testify",
    "com_github_docker_go_connections",
    "com_github_testcontainers_testcontainers_go"
)

# Python
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    python_version = "3.11",
    hub_name = "pypi",
    requirements_lock = "//python:requirements_lock.txt",
    requirements_windows = "//python:requirements_windows.txt",
)
use_repo(pip, "pypi")


# Go docker image
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "alpine_base",
    digest = "sha256:c5b1261d6d3e43071626931fc004f70149baeba2c8ec672bd4f27761f8e1ad6b",
    image = "alpine",
    platforms = {
        "linux/amd64" : "amd64",
        "linux/arm64/v8": "arm64v8",
    },
)

use_repo(oci, "alpine_base")



