load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "models.go",
        "repository.go",
    ],
    importpath = "github.com/Tracking-Detector/td-backend/go/td_common/model",
    visibility = ["//visibility:public"],
    deps = ["@org_mongodb_go_mongo_driver//bson"],
)
