load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "queue",
    srcs = [
        "adapter.go",
        "rabbitmq.go",
    ],
    importpath = "github.com/Tracking-Detector/td-backend/go/td_common/queue",
    visibility = ["//visibility:public"],
    deps = ["@com_github_streadway_amqp//:amqp"],
)
