load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "util",
    srcs = ["health.go"],
    importpath = "github.com/Tracking-Detector/td-backend/go/td_common/util",
    visibility = ["//visibility:public"],
    deps = [
        "//go/td_common/response",
        "@com_github_gofiber_fiber_v2//:fiber",
        "@com_github_gofiber_fiber_v2//middleware/cors",
        "@com_github_gofiber_fiber_v2//middleware/logger",
    ],
)
