load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/Tracking-Detector/td-backend/go/td_dataset/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//go/td_common/config",
        "//go/td_common/repository",
        "//go/td_common/service",
        "//go/td_common/util",
        "//go/td_dataset/controller",
        "//go/td_dataset/job",
        "@com_github_robfig_cron//:cron",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "dataset_layer",
    srcs = [":cmd"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/cmd"],
    tars = [":dataset_layer"],
)

platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["gcr.io/Tracking/td_dataset:latest"],
)

oci_push(
    name = "push",
    tags = ["publish"],
    remote_tags = ["v0.0.1"],
    image = ":image",
    repository = "gcr.io/tracking-detector/td-backend/td_dataset",
)