load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/Tracking-Detector/td-backend/go/td_user/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//go/td_common/config",
        "//go/td_common/repository",
        "//go/td_common/service",
        "//go/td_common/util",
        "//go/td_user/controller",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "user_layer",
    srcs = [":cmd"],
)

oci_image(
    name = "image",
    base = "@alpine_base",
    entrypoint = ["/cmd"],
    tars = [":user_layer"],
)


platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform =  select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)


oci_push(
    name = "push",
    tags = ["publish"],
    remote_tags = ["latest"],
    image = ":transitioned_image",
    repository = "ghcr.io/tracker-detector/td_user",
)