load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "mocks",
    srcs = [
        "BaseModel.go",
        "BaseModelName.go",
        "DatasetRepository.go",
        "DocumentIdExtractor.go",
        "DocumentLifecycleExtractor.go",
        "ExportRunRepository.go",
        "ExporterRepository.go",
        "FrameIdExtractor.go",
        "FrameTypeExtractor.go",
        "IAuthService.go",
        "IDatasetService.go",
        "IEncryptionService.go",
        "IExportRunService.go",
        "IExporterService.go",
        "IModelService.go",
        "IPublishService.go",
        "IQueueChannelAdapter.go",
        "IRepository.go",
        "IRequestService.go",
        "IStorageClientAdater.go",
        "IStorageService.go",
        "ITrainingrunService.go",
        "IUserService.go",
        "InitiatorExtractor.go",
        "MethodExtractor.go",
        "ModelRepository.go",
        "ParentFrameIdExtractor.go",
        "RequestHeadersExtractor.go",
        "RequestIdExtractor.go",
        "RequestRepository.go",
        "SuccessExtractor.go",
        "TabIdExtractor.go",
        "TimeStampExtractor.go",
        "TrackerExtractor.go",
        "TrainingRunRepository.go",
        "TypeExtractor.go",
        "URLExtractor.go",
        "UserRepository.go",
    ],
    importpath = "github.com/Tracking-Detector/td-backend/go/td_common/test/mocks",
    visibility = ["//visibility:public"],
    deps = [
        "//go/td_common/model",
        "//go/td_common/payload",
        "@com_github_minio_minio_go_v7//:minio-go",
        "@com_github_streadway_amqp//:amqp",
        "@com_github_stretchr_testify//mock",
    ],
)
